--- a/Frontend/src/components/Navbar/index.css
+++ b/Frontend/src/components/Navbar/index.css
@@ -1,6 +1,7 @@
 .navbarContainer {
   position: fixed;
   width: 100vw;
+  z-index: 500;
 }
 .navbar {
   display: flex;
@@ -12,6 +13,7 @@
   padding: 0.5rem var(--lr_padding);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
+  background-image: linear-gradient(rgb(255, 255, 255), rgba(255, 255, 255, 0));
 }
 
 .logo {
