--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -7,6 +7,7 @@
 }
 
 :root {
+  --top_gap: 3rem;
   --lr_padding: 15vw;
   --primary_font: "Sora", sans-serif;
   --secondary_font: "Teko", sans-serif;
@@ -47,6 +48,12 @@
   font-family: var(--secondary_font);
   line-height: 1;
 }
+.paraLarge {
+  font-family: var(--primary_font);
+  font-size: var(--para_larger_size);
+  color: var(--pri_dark_tone);
+  font-weight: 600;
+}
 .paraMedium {
   font-family: var(--primary_font);
   font-size: var(--para_medium_size);
@@ -79,6 +86,17 @@
   height: 2px;
   background-image: linear-gradient(#7c7fff, #7c7eff00);
 }
+.gradCompleteLine {
+  height: 2px;
+  width: 100%;
+  background-image: linear-gradient(
+    to right,
+    var(--pri_light_tone),
+    rgba(124, 126, 255, 0)
+  );
+  background-size: cover;
+  background-repeat: no-repeat;
+}
 .commonPadding {
   padding-left: var(--lr_padding);
   padding-right: var(--lr_padding);
@@ -98,4 +116,5 @@ body {
 
 .pagePadding {
   padding-top: 5rem;
+  min-height: 100vh;
 }
