--- a/Frontend/src/App.css
+++ b/Frontend/src/App.css
@@ -18,6 +18,7 @@
   --pri_light_tone: #0077c0;
   --sec_color: #7c7fff;
   --white_color: #fafafa;
+  --bg:white;
 
   /* font sizes */
   /* large sizes */
