--- a/Frontend/src/components/Home/index.css
+++ b/Frontend/src/components/Home/index.css
@@ -54,3 +54,10 @@
   left: 0;
   top: 0;
 }
+
+.grid {
+  background-image: linear-gradient(rgb(255, 255, 255), rgb(246, 246, 246));
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: var(--top_gap) 0;
+}
