--- a/Frontend/src/components/JobPosts/index.css
+++ b/Frontend/src/components/JobPosts/index.css
@@ -30,11 +30,13 @@
   gap: 30px;
   margin: 1rem 0.25rem;
 }
+
 .jobCard {
+  min-width: 330px;
+  max-width: 350px;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  min-width: 300px;
+  justify-content: space-between;
 }
 
 .jobInfoContainer {
@@ -43,6 +45,15 @@
   background-image: linear-gradient(135deg, #0077c0, #7c7fff);
   border-radius: 0.25rem;
   color: var(--white_color);
+  min-height: 250px;
+  max-height: 280px;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 2;
+  overflow-y: auto;
+}
+.jobInfoContainer::-webkit-scrollbar {
+  display: none;
 }
 .typeAndFrom {
   display: flex;
@@ -69,16 +80,18 @@
   font-size: 1.5rem;
 }
 .details {
+  padding: 0.5rem 1.55rem;
+  flex-grow: 2;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  padding: 0.5rem 1.55rem;
 }
 .details .thickFont {
-  font-size: var(--medium_lsize);
+  font-size: var(--small_lsize);
   font-weight: bold;
   text-transform: uppercase;
+  text-align: center;
 }
 .batcheAndRole,
 .locationAndPay {
@@ -86,6 +99,17 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  margin: 0.35rem 0;
+}
+.batcheAndRole .batches {
+  min-width: 100px;
+  max-width: 250px;
+}
+.jbRole {
+  min-width: 100px;
+  max-width: 300px;
+  text-align: right;
+  line-height: 1;
 }
 .locationAndPay .paraSmall {
   background-color: var(--white_color);
@@ -103,6 +127,7 @@
   border-radius: 0.25rem;
   cursor: pointer;
   text-align: center;
+  align-self: flex-end;
 }
 
 /* home routes */
