removed grid class name

--- a/Frontend/src/components/Home/index.css
+++ b/Frontend/src/components/Home/index.css
@@ -57,7 +57,7 @@
 
 
 
-.grid {
+.gridLinesEffect {
   background-image: linear-gradient(rgb(255, 255, 255), rgb(246, 246, 246));
   background-size: cover;
   background-repeat: no-repeat;
