--- a/Frontend/src/components/JobPosts/index.css
+++ b/Frontend/src/components/JobPosts/index.css
@@ -67,11 +67,11 @@
 }
 .typeAndFrom .paraMedium {
   border-radius: 0 var(--bradius) var(--bradius) 0;
-  padding: 0.5rem 1.65rem;
+  padding: 0.2rem 1.5rem;
 }
 .typeAndFrom .svg {
-  border-radius: var(--bradius) 0 0 var(--bradius);
-  padding: 0.5rem 1rem;
+  border-radius: 10px 0 0 10px;
+  padding: 0.9rem 1.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -80,17 +80,16 @@
   font-size: 1.5rem;
 }
 .details {
-  padding: 0.5rem 1.55rem;
-  flex-grow: 2;
+  padding: 0rem 0.8rem;
+  /* flex-grow: 2; */
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  /* justify-content: space-between; */
+  /* align-items: center; */
 }
 .details .thickFont {
   font-size: var(--small_lsize);
-  font-weight: bold;
-  text-transform: uppercase;
+  font-weight: var(--size);
   text-align: center;
 }
 .batcheAndRole,
