--- a/Frontend/src/components/About/index.css
+++ b/Frontend/src/components/About/index.css
@@ -76,20 +76,24 @@
 
 .memContainer {
   margin: 1rem 1rem;
-  width: 150px;
   /* background-color: aqua; */
+    /* border: 2px solid blue; */
+
 }
 .imageContainer {
-  width: 250px;
+  width: 180px;
   overflow: hidden;
   border-radius: 0.25rem;
+  /* border: 2px solid black; */
 }
 .imageContainer img {
-  /* aspect-ratio: 0.5/0.5; */
-  width: 150px;
-  height: 200px;
+  aspect-ratio: 4/5;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   pointer-events: none;
+    /* border: 2px solid red; */
+
 }
 
 .personProf {
@@ -181,6 +185,17 @@
   margin-left: 0.5rem;
 }
 
+
+.founder {
+  color: var(--pri_dark_tone);
+  line-height: 1;
+  padding: 0.5rem 0;
+  font-family: var(--primary_font);
+  font-weight: 600;
+  font-size: medium;
+}
+
+
 @media screen and (max-width: 1025px) {
   .aboutTopContainer {
     margin-top: 2rem;
@@ -201,13 +216,14 @@
     margin: 0.85rem 0;
   }
   .memContainer {
-    --widthSize: 220px;
     margin: 0 0.85rem;
-    width: var(--widthSize);
   }
-  .imageContainer {
-    width: var(--widthSize);
+  .imageContainer
+  {
+    width: 170px ;
   }
+
+ 
   .personProf .batchDet span {
     --size: 5px;
     margin: 0 0.45rem;
@@ -243,12 +259,11 @@
   }
 
   .memContainer {
-    --widthSize: 200px;
+
     margin: 0 0.45rem;
-    width: var(--widthSize);
   }
   .imageContainer {
-    width: var(--widthSize);
+    width: 160px;
   }
   .personProf .batchDet span {
     --size: 5px;
@@ -287,13 +302,13 @@
   }
 
   .memContainer {
-    --widthSize: 300px;
     margin: 0 0.45rem;
-    width: var(--widthSize);
   }
   .imageContainer {
-    width: var(--widthSize);
+    width: 200px;
+    height: 250px;
   }
+
   .personProf .tinySize {
     font-size: 0.75rem;
   }
@@ -329,12 +344,4 @@
     text-align: center;
     justify-content: center;
   }
-}
-.founder {
-  color: var(--pri_dark_tone);
-  line-height: 1;
-  padding: 0.5rem 0;
-  font-family: var(--primary_font);
-  font-weight: 600;
-  font-size: medium;
 }
