--- a/Frontend/src/components/Home/index.css
+++ b/Frontend/src/components/Home/index.css
@@ -83,3 +83,72 @@
 .animate-bounce-right {
   animation: bounce-right 2s infinite;
 }
+.xmark:hover {
+  transform: scale(1.2);
+  transition: transform 0.3s ease;
+}
+.info-container {
+  position: relative;
+  display: inline-block;
+}
+
+.info-icon {
+  cursor: pointer;
+}
+
+.info-message {
+  position: absolute;
+  top: -30px;
+  left: 69%;
+  transform: translateX(-50%);
+  width: 150px;
+  background-color: #1d4ed8;
+  color: white;
+  padding: 8px;
+  border-radius: 4px;
+  opacity: 1;
+  transition: opacity 0.3s ease-in-out;
+  white-space: pre-wrap;
+}
+
+.info-message::before {
+  content: '';
+  position: absolute;
+  top: 100%;
+  left: 20%;
+  border: 8px solid transparent;
+  border-top-color: #1d4ed8;
+  transform: translateX(-50%);
+}
+
+.hov:hover {
+  transform: scale(1.15);
+  transition: transform 0.5s ease;
+}
+
+/* Define animation keyframes */
+@keyframes bounce {
+  0%, 20%, 50%, 80%, 100% {
+    transform: translateX(0);
+  }
+  40% {
+    transform: translateX(-10px);
+  }
+  60% {
+    transform: translateX(-5px);
+  }
+}
+
+/* Apply styles to the NavLink container */
+.navLinkContainer {
+  position: relative;
+  display: inline-block;
+}
+
+/* Define the animation for bouncing */
+.bounceAnimation {
+  animation-name: bounce;
+  animation-duration: 1s; /* Adjust animation duration as needed */
+  animation-iteration-count: 1;
+}
+
