--- a/Frontend/src/components/About/index.css
+++ b/Frontend/src/components/About/index.css
@@ -86,9 +86,9 @@
   /* border: 2px solid black; */
 }
 .imageContainer img {
-  aspect-ratio: 4/5;
-  width: 100%;
-  height: 100%;
+  /* aspect-ratio: 4/5; */
+  width: 150px;
+  height: 200px;
   object-fit: cover;
   pointer-events: none;
     /* border: 2px solid red; */
