--- a/Frontend/src/components/Navbar/index.css
+++ b/Frontend/src/components/Navbar/index.css
@@ -49,35 +49,37 @@
 @media screen and (max-width: 769px) {
   .navbar {
     z-index: 150;
+    /* background-color: #96bfca; */
   }
   .hamburgerMenu {
     display: block;
     --size: 30px;
     width: var(--size);
     height: var(--size);
-    background-color: var(--pri_dark_tone);
-    border-radius: 50%;
+    /* background-color: var(--pri_dark_tone); */
+    /* border-radius: 50%; */
   }
   .hamActive {
-    border: 4px solid var(--pri_dark_tone);
+    /* border: 4px solid var(--pri_dark_tone); */
     background-color: transparent;
   }
   .navLinks {
+    margin-top: 69px;
     flex-direction: column;
     position: absolute;
     z-index: 100;
     width: 100vw;
-    height: 100vh;
+    height: 40vh;
     left: 100%;
     top: 0;
     font-weight: normal;
-    background-image: linear-gradient(#9d94ff, #9d94fff7);
-    color: var(--white_color);
-    font-size: 2rem;
+    background-image: linear-gradient(#96bfca, #9d94fff7);
+    /* color: var(--white_color); */
+    font-size: 1rem;
     justify-content: space-evenly;
     z-index: -1000;
-    backdrop-filter: blur(10px);
-    -webkit-backdrop-filter: blur(20px);
+    backdrop-filter: blur(10px); 
+    -webkit-backdrop-filter: blur(20px); 
     transition: all 0.5s ease;
   }
   .navActive {
@@ -85,12 +87,8 @@
   }
   .navLinks li {
     width: 100%;
-    text-align: center;
-    border-bottom: 1px solid white;
   }
   .navLinks li a {
     display: block;
-    width: 100%;
-    padding: 2rem 0;
   }
 }
