--- a/Admin/src/App.css
+++ b/Admin/src/App.css
@@ -33,7 +33,7 @@
 .commonForm {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: start;
   box-shadow: 0 0 2px 2px rgb(239, 239, 239);
   padding: 3rem 4rem;
 }
