--- a/Frontend/src/components/FullTalk/index.css
+++ b/Frontend/src/components/FullTalk/index.css
@@ -7,26 +7,26 @@
   margin: 1rem 0;
 }
 .bigTextContainerFt {
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 2rem 3rem;
+  /* width: 100%; */
+  /* position: relative; */
+  /* top: 50%; */
+  /* transform: translateY(-50%); */
+  /* padding: 2rem 3rem; */
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
 }
 .bigTextContainerFt .bgTextFt {
-  font-size: 10rem;
+  font-size: 7rem;
   font-weight: bold;
   text-transform: uppercase;
   color: var(--sec_color);
   font-family: var(--normal_font);
-  /* -webkit-text-stroke: 2px rgba(134, 104, 255, 0.658); */
-  order: 2;
+  -webkit-text-stroke: 2px rgba(134, 104, 255, 0.658);
+  /* order: 2; */
 }
 .shortTextFt {
-  width: 100%;
+  /* width: 100%; */
   font-weight: bold;
   color: var(--sec_color);
   text-transform: uppercase;
@@ -35,7 +35,7 @@
   text-decoration: underline;
 }
 .ftimageContainer .imageContainerFt {
-  width: 40%;
+  width: 0%;
   position: relative;
   margin: 0 auto;
 }
@@ -45,7 +45,8 @@
 
 .ftOverViewContainer {
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 2fr 0fr;
+  padding-left: 80px;
 }
 
 .ftOverViewContainer .thickFont,
@@ -65,4 +66,8 @@
 
 .questionItem .answer {
   margin-left: 1.95rem;
+}
+
+.ftodSection {
+  display: flex;
 }
