--- a/Frontend/src/components/Home/index.css
+++ b/Frontend/src/components/Home/index.css
@@ -37,7 +37,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 0.3rem;
   line-height: 1.15;
 }
 
@@ -56,7 +56,7 @@
   background-position: center;
   position: relative;
   background-repeat: no-repeat;
-  margin-left: 50px;
+  margin-left: 60px;
 }
 
 .heroImg img {
@@ -257,10 +257,50 @@
   border-radius: 0.25rem;
   text-align: center;
 }
+.shining-container {
+  position: absolute;
+  display: inline-block;
+  border-radius: 50%;
+  overflow: hidden;
+  top: 200px;
+  max-width: 150px;
+}
+
+.potd-image {
+  display: block;
+  position: relative;
+}
+
+.shining-container::before {
+  content: '';
+  position: absolute;
+  border-radius: 20%;
+  background-color: rgb(255, 255, 255, 0.7);
+  left: -100%;
+  width: 6%;
+  height: 100%;
+  transform: skewX(-35deg);
+  opacity: 1;
+  animation: shine 2s infinite;
+  z-index: 10;
+}
+
+@keyframes shine {
+  0% {
+    left: -10%;
+  }
+  50% {
+    left: 100%;
+  }
+  100% {
+    left: 110%;
+  }
+}
+
 
 @media screen and (max-width: 769px) {
   .heroImg {
-    min-width: 47%;
+    min-width: 45%;
     height: 23vh;
     width: max-content;
     background-image: url("/images/algogri.png");
@@ -268,7 +308,7 @@
     background-position: center;
     position: relative;
     background-repeat: no-repeat;
-    margin-left: 38px;
+    margin-left: 55px;
   }
   
   .heroImg img {
@@ -311,6 +351,16 @@
     margin-top: 10px;
   }
   .gapBtwSection {
-    padding: 30px 0 0 0;
+    padding: 10px 0 0 0;
+  }
+  .shining-container {
+    position: absolute;
+    display: inline-block;
+    border-radius: 50%;
+    overflow: hidden;
+    top: 120px;
+    width: 80px;
+    right: 10px;
+    z-index: 10;
   }
 }
