--- a/Frontend/src/components/PlacementTalks/index.css
+++ b/Frontend/src/components/PlacementTalks/index.css
@@ -22,6 +22,7 @@
 }
 .storyDetails {
   line-height: 1;
+  max-width: fit-content;
 }
 .storyDetails .thickFont {
   font-family: var(--secondary_font);
@@ -42,4 +43,15 @@
 
 .storyArrow svg {
   font-size: 2.8rem;
+}
+
+
+@media screen and (max-width: 769px) { 
+  .storyDetails .thickFont {
+    font-size: 11vw;
+  }
+  .storyLink {
+    padding: 0 0 1rem 0;
+  }
+
 }
