--- a/Frontend/src/components/Home/index.css
+++ b/Frontend/src/components/Home/index.css
@@ -297,6 +297,11 @@
   }
 }
 
+.ucdata:hover {
+  transform: scale(1.08);
+  transition: transform 0.4s ease;
+}
+
 
 @media screen and (max-width: 769px) {
   .heroImg {
