--- a/Frontend/src/components/JobPosts/index.css
+++ b/Frontend/src/components/JobPosts/index.css
@@ -187,6 +187,11 @@
     flex-direction: column;
     margin: 2rem 0;
   }
+  .jobCard:hover {
+    transform: scale(1);
+    transition: transform 0s ease;
+    cursor: pointer;
+  }
   .UCcardHome {
     display: flex;
     flex-direction: column;
